feat(notes): you can now include external notes to provide details around your climbing progression
